# Bao

./: .gitignore
api/: .env  Cargo.toml  Rocket.toml  config.toml  gen_secret_key.py  tests.sql
api/db/migrations/: 20241206151916_create_users_table.sql  20241210114454_create_users_table.sql
api/src/: authorization.rs  main.rs
api/src/models/: user.rs
frontend/: package.json  tailwind.config.js
frontend/src/: App.vue  main.ts
frontend/src/components/: HelloWorld.vue
frontend/src/store/: authUser.ts
frontend/src/views/: HomeView.vue
